[package]
name = "argus-github"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-github — GitHub PR fetching + comment posting"
repository.workspace = true
# Internal library — not published to crates.io. The GitHub API client
# is a private adapter; consumers use the `argus-verify` / `apohara-argus-cli`
# public surfaces that orchestrate the PR review workflow.
[dependencies]
apohara-argus-core = { workspace = true }
argus-crypto = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
