[package]
name = "argus-github"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-github — GitHub PR fetching + comment posting"
repository.workspace = true
# Published to crates.io as a public library. The GitHub API client
# is used by the 7 user-facing argus crates (PR fetching + comment
# posting is wired into argus-verify and apohara-argus-cli).
[dependencies]
apohara-argus-core = { workspace = true }
argus-crypto = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
