[package]
name = "argus-guard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pre-commit guard for AI-generated code. Blocks SLOP patterns and LLM-prompt-injection sinks before they enter your repo."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
publish = true

[[bin]]
name = "argus-guard"
path = "src/main.rs"

[dependencies]
argus-core = { workspace = true }
argus-llm = { workspace = true }
argus-slop = { workspace = true }
argus-crypto = { workspace = true }
argus-github = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
