[package]
name = "argus-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-llm — BYOK LLM client (NVIDIA NIM primary)"
repository.workspace = true

[dependencies]
argus-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
dalle = []
heygen = []
