[package]
name = "argus-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-llm — BYOK LLM client (NVIDIA NIM primary)"
repository.workspace = true

[dependencies]
argus-core = { workspace = true }
argus-crypto = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[features]
default = []
dalle = []
heygen = []
