[package]
name = "argus-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "BYOK NVIDIA NIM client for ARGUS. Pass-through LLM inference with deterministic mock support."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["llm", "byok", "nim", "openai-compatible", "argus"]
categories.workspace = true
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
publish = true

[dependencies]
apohara-argus-core = { workspace = true }
argus-crypto = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[features]
default = []
