[package]
name = "argus-otel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS OpenTelemetry initialization helpers (stdout exporter, opt-in via env var). [Refs: 6.3]"
repository.workspace = true

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-stdout = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
