[package]
name = "argus-otel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS OpenTelemetry initialization helpers (stdout exporter, opt-in via env var). [Refs: 6.3]"
repository.workspace = true
# Published to crates.io as a public library. Exposes the OpenTelemetry
# stdout exporter (opt-in via env var) used by the 7 user-facing
# argus crates and by external integrators.
[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-stdout = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
