[package]
name = "argus-slop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-slop — the 4 analyzers (slop/security/arch/verdict)"
repository.workspace = true
# Internal library — not published to crates.io. The deterministic
# regex + LLM analyzer pipeline is exposed via the public surfaces
# (CLI / guard / verify / lens / dashboard), not as a standalone crate.
publish = false

[dependencies]
apohara-argus-core = { workspace = true }
argus-llm = { workspace = true }
argus-crypto = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
