[package]
name = "argus-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-verify — Aegis Verify, the PR review worker (HTTP)"
repository.workspace = true

[[bin]]
name = "argus-verify"
path = "src/main.rs"

[dependencies]
argus-core = { workspace = true }
argus-llm = { workspace = true }
argus-slop = { workspace = true }
argus-crypto = { workspace = true }
argus-github = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
