[package]
name = "argus-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "PR review HTTP worker. Analyzes diffs through 4 specialists (slop, security, architecture, verdict) and posts a signed verdict."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
publish = true

[[bin]]
name = "argus-verify"
path = "src/main.rs"

[dependencies]
argus-core = { workspace = true }
argus-llm = { workspace = true }
argus-slop = { workspace = true }
argus-crypto = { workspace = true }
argus-github = { workspace = true }
argus-otel = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
hex = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
# Used by `VerifyWorker::new()` to mint a per-worker audit signing key
# (`SigningKey::generate(&mut rand::rngs::OsRng)`). Ephemeral for the
# in-memory store (Roadmap 2.2); production would load from KMS/HSM.
rand = { workspace = true }
# SQLite-backed audit store [Refs: 6.4]. Feature `sqlite` enables the
# in-process driver; `migrate` lets us run schema migrations on startup.
sqlx = { workspace = true, features = ["sqlite", "migrate"] }

[dev-dependencies]
# Used by `tests/shutdown.rs` to deliver SIGTERM/SIGINT to the test
# process without spawning a child. The cargo test binary IS the
# server, so we send the signal to ourselves and expect the
# graceful-shutdown future to fire.
nix = { version = "0.29", features = ["signal"] }
